--- a/website/templates/allproducts.html
+++ b/website/templates/allproducts.html
@@ -4,11 +4,11 @@
 
 {% block content %}
 <div class="container mt-5">
-    <h2 class="text-center text-info">All Products</h2>
+    <h2 class="text-center mb-4">All Products</h2>
     <hr class="mb-5">
 
     {% for cat in allcategories %}
-    <h3 class="text-info">{{ cat.title }}</h3>
+    <h3 class="mb-4">{{ cat.title }}</h3>
     <hr>
     <div class="row g-4">
         {% for p in cat.product_set.all %}
@@ -20,11 +20,13 @@
                         <a href="{% url 'ecomapp:productdetail' p.slug %}" class="text-decoration-none text-dark">{{ p.title }}</a>
                     </h5>
                     <p class="card-text text-muted">
-                        <small><strike>Rs. {{ p.marked_price }}</strike></small>
-                        <strong>Rs. {{ p.selling_price }}</strong>
+                          <small><strike>Rs. {{ p.marked_price }}</strike></small>
+                        <span class="price-tag ms-2">Rs. {{ p.selling_price }}</span>
                     </p>
-                    <a href="{% url 'ecomapp:addtocart' p.id %}" class="btn btn-secondary w-100">Add to Cart</a>
-
+                    {% comment %} <a href="{% url 'ecomapp:addtocart' p.id %}" class="btn btn-primary w-100">Add to Cart</a> {% endcomment %}
+                    <a href="{% url 'ecomapp:addtocart' p.id %}" class="btn btn-primary">
+                            <i class="fas fa-cart-plus me-2"></i>Add to Cart
+                        </a>
                 </div>
             </div>
         </div>
