--- a/website/templates/search.html
+++ b/website/templates/search.html
@@ -19,7 +19,9 @@
                         <h4><a href="{% url 'ecomapp:productdetail' result.slug %}" class="text-dark">{{ result.title }}</a></h4>
                         <p>{{ result.description|truncatewords:50 }}</p>
                         <p><strong>Return Policy:</strong> {{ result.return_policy }}</p>
-                        <a href="{% url 'ecomapp:addtocart' result.id %}" class="btn btn-secondary">Add to Cart</a>
+                         <a href="{% url 'ecomapp:addtocart' result.id %}" class="btn btn-primary">
+                            <i class="fas fa-cart-plus me-2"></i>Add to Cart
+                        </a>
                     </div>
                 </div>
                 {% endfor %}
